syntax = "proto3";

package j5.list.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/pentops/j5/gen/j5/list/v1/list_j5pb";

message PageRequest {
  optional string token = 1;
  optional int64 page_size = 2 [(buf.validate.field).int64.gt = 0];
}

message PageResponse {
  optional string next_token = 1;
}
