// Generated by j5build v0.0.0-20250905235418-380716aaea76. DO NOT EDIT

syntax = "proto3";

package test.foo.v1.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "test/foo/v1/foo.j5s.proto";

service FooQueryService {
  option (j5.ext.v1.service) = {
    state_query: {
      entity: "foo"
    }
    default_auth: {
      jwt_bearer: {
      }
    }
  };

  rpc FooGet(FooGetRequest) returns (FooGetResponse) {
    option (google.api.http) = {get: "/test/foo/v1/foo/q/{foo_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc FooList(FooListRequest) returns (FooListResponse) {
    option (google.api.http) = {get: "/test/foo/v1/foo/q"};
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc FooEvents(FooEventsRequest) returns (FooEventsResponse) {
    option (google.api.http) = {get: "/test/foo/v1/foo/q/{foo_id}/events"};
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

service FooCommandService {
  option (j5.ext.v1.service) = {
    state_command: {
      entity: "foo"
    }
    default_auth: {
      jwt_bearer: {
      }
    }
  };

  rpc PostFoo(PostFooRequest) returns (PostFooResponse) {
    option (google.api.http) = {
      post: "/test/foo/v1/foo/c"
      body: "*"
    };
  }
}

service FooDownloadService {
  rpc DownloadRaw(DownloadRawRequest) returns (google.api.HttpBody) {
    option (google.api.http) = {get: "/test/foo/v1/foo/{id}/raw"};
  }
}

message FooGetRequest {
  option (j5.ext.v1.message).object = {};

  string foo_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key.format = FORMAT_UUID,
    (j5.ext.v1.key).primary = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];
}

message FooGetResponse {
  option (j5.ext.v1.message).object = {};

  test.foo.v1.FooState foo = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}

message FooListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message FooListResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.foo.v1.FooState foo = 1 [(j5.ext.v1.field).array = {}];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message FooEventsRequest {
  option (j5.ext.v1.message).object = {};

  string foo_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key.format = FORMAT_UUID,
    (j5.ext.v1.key).primary = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  j5.list.v1.PageRequest page = 2 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 3 [(j5.ext.v1.field).object = {}];
}

message FooEventsResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.foo.v1.FooEvent events = 1 [(j5.ext.v1.field).array = {}];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message PostFooRequest {
  option (j5.ext.v1.message).object = {};

  string id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key.format = FORMAT_UUID
  ];
}

message PostFooResponse {
  option (j5.ext.v1.message).object = {};

  test.foo.v1.FooState foo = 1 [(j5.ext.v1.field).object = {}];
}

message DownloadRawRequest {
  option (j5.ext.v1.message).object = {};

  string id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key.format = FORMAT_UUID
  ];
}
